[gd_scene load_steps=44 format=2]

[ext_resource path="res://Sprites/Mobile - Bounce Original - Everything/essai.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Mobile - Bounce Original - Everything/Everything (Medium)/game_dialog_failed_title@2x.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Mobile - Bounce Original - Everything/game_dialog_failed_button_retry@2x.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Mobile - Bounce Original - Everything/ui_nw_ground_block@2x.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Mobile - Bounce Original - Everything/dialog_pause_button_restart@2x.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Mobile - Bounce Original - Everything/dialog_pause_button_menu@2x.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Mobile - Bounce Original - Everything/dialog_pause_button_resume@2x.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Mobile - Bounce Original - Everything/dialog_pause_button_sound_off@2x.png" type="Texture" id=8]
[ext_resource path="res://Scènes/life2x.tscn" type="PackedScene" id=9]
[ext_resource path="res://Sprites/Mobile - Bounce Original - Everything/Everything (Medium)/gbar_life@2x.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Mobile - Bounce Original - Everything/gbar_pause@2x.png" type="Texture" id=11]
[ext_resource path="res://Scènes/thorn (epine).tscn" type="PackedScene" id=12]
[ext_resource path="res://Scripts/level.gd" type="Script" id=13]
[ext_resource path="res://Scènes/anneau.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scènes/checkpoint.tscn" type="PackedScene" id=15]
[ext_resource path="res://Sprites/Mobile - Bounce Original - Everything/game_dialog_failed_button_menu@2x.png" type="Texture" id=16]
[ext_resource path="res://Scripts/ViewportContainer.gd" type="Script" id=17]
[ext_resource path="res://Sprites/Mobile - Bounce Original - Everything/Everything (Medium)/gbar_ring@2x.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Mobile - Bounce Original - Everything/game_dialog_complete_star_yellow@2x.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Mobile - Bounce Original - Everything/game_dialog_complete_star_gray@2x.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Mobile - Bounce Original - Everything/game_dialog_complete_button_next@2x.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Mobile - Bounce Original - Everything/game_dialog_complete_button_menu@2x.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Mobile - Bounce Original - Everything/game_dialog_complete_button_retry@2x.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Mobile - Bounce Original - Everything/Everything (Medium)/portal_sheet@2x.png" type="Texture" id=24]
[ext_resource path="res://Sprites/splash_logo@2x.png" type="Texture" id=25]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 64, 0, 64, 64, 0, 64 )

[sub_resource type="TileSet" id=3]
0/name = "essai.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "ui_nw_ground_block@2x.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 24 )
region = Rect2( 0, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 24 )
region = Rect2( 160, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 24 )
region = Rect2( 320, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 24 )
region = Rect2( 480, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 24 )
region = Rect2( 640, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 24 )
region = Rect2( 800, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 24 )
region = Rect2( 960, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 24 )
region = Rect2( 1120, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 24 )
region = Rect2( 1280, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 24 )
region = Rect2( 1440, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 24 )
region = Rect2( 1600, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 24 )
region = Rect2( 1760, 0, 160, 160 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 61.9282, 62.675 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 16.4048, 62.9514 )

[node name="level01" type="Node2D"]
pause_mode = 2
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 13 )
ID_niveau = 1

[node name="anneaux" type="Node2D" parent="."]

[node name="anneau" parent="anneaux" instance=ExtResource( 14 )]

[node name="anneau7" parent="anneaux" instance=ExtResource( 14 )]
position = Vector2( 2141.08, 192.121 )

[node name="anneau8" parent="anneaux" instance=ExtResource( 14 )]
position = Vector2( 4764.83, 384.166 )

[node name="anneau9" parent="anneaux" instance=ExtResource( 14 )]
position = Vector2( 5274.07, 384.166 )

[node name="anneau10" parent="anneaux" instance=ExtResource( 14 )]
position = Vector2( 6527.77, 286.521 )
rotation = -1.5708

[node name="anneau11" parent="anneaux" instance=ExtResource( 14 )]
position = Vector2( 6272.99, 285.417 )
rotation = 1.5708

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 3 )
show_collision = true
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 0, 0, 32, 0, 0, 33, 0, 0, 34, 0, 0, 35, 0, 0, 36, 0, 0, 37, 0, 0, 38, 0, 0, 39, 0, 0, 40, 0, 0, 41, 0, 0, 42, 0, 0, 43, 0, 0, 44, 0, 0, 45, 0, 0, 46, 0, 0, 47, 0, 0, 48, 0, 0, 49, 0, 0, 50, 0, 0, 51, 0, 0, 52, 0, 0, 53, 0, 0, 54, 0, 0, 55, 0, 0, 56, 0, 0, 57, 0, 0, 58, 0, 0, 59, 0, 0, 60, 0, 0, 61, 0, 0, 62, 0, 0, 63, 0, 0, 64, 0, 0, 65, 0, 0, 66, 0, 0, 67, 0, 0, 68, 0, 0, 69, 0, 0, 70, 0, 0, 71, 0, 0, 72, 0, 0, 73, 0, 0, 74, 0, 0, 75, 0, 0, 76, 0, 0, 77, 0, 0, 78, 0, 0, 79, 0, 0, 80, 0, 0, 81, 0, 0, 82, 0, 0, 83, 0, 0, 84, 0, 0, 85, 0, 0, 86, 0, 0, 87, 0, 0, 88, 0, 0, 89, 0, 0, 90, 0, 0, 91, 0, 0, 92, 0, 0, 93, 0, 0, 94, 0, 0, 95, 0, 0, 96, 0, 0, 97, 0, 0, 98, 0, 0, 99, 0, 0, 100, 0, 0, 101, 0, 0, 102, 0, 0, 103, 0, 0, 104, 0, 0, 105, 0, 0, 106, 0, 0, 107, 0, 0, 108, 0, 0, 109, 0, 0, 110, 0, 0, 111, 0, 0, 112, 0, 0, 65536, 0, 0, 65537, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65557, 0, 0, 65558, 0, 0, 65559, 0, 0, 65569, 0, 0, 65570, 0, 0, 65580, 0, 0, 65581, 0, 0, 65582, 0, 0, 65601, 0, 0, 65602, 0, 0, 65603, 0, 0, 65610, 0, 0, 65611, 0, 0, 65618, 0, 0, 65619, 0, 0, 65635, 0, 0, 65636, 0, 0, 65646, 0, 0, 65647, 0, 0, 65648, 0, 0, 131072, 0, 0, 131073, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131093, 0, 0, 131094, 0, 0, 131095, 0, 0, 131116, 0, 0, 131117, 0, 0, 131138, 0, 0, 131139, 0, 0, 131146, 0, 0, 131147, 0, 0, 131154, 0, 0, 131155, 0, 0, 131171, 0, 0, 131172, 0, 0, 131182, 0, 0, 131183, 0, 0, 131184, 0, 0, 196608, 0, 0, 196609, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196622, 0, 0, 196623, 0, 0, 196629, 0, 0, 196630, 0, 0, 196631, 0, 0, 196652, 0, 0, 196653, 0, 0, 196674, 0, 0, 196675, 0, 0, 196678, 0, 0, 196679, 0, 0, 196682, 0, 0, 196683, 0, 0, 196686, 0, 0, 196687, 0, 0, 196690, 0, 0, 196691, 0, 0, 196694, 0, 0, 196695, 0, 0, 196707, 0, 0, 196708, 0, 0, 196718, 0, 0, 196719, 0, 0, 196720, 0, 0, 262144, 0, 0, 262145, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262158, 0, 0, 262159, 0, 0, 262165, 0, 0, 262166, 0, 0, 262167, 0, 0, 262170, 0, 0, 262171, 0, 0, 262172, 0, 0, 262173, 0, 0, 262176, 0, 0, 262177, 0, 0, 262178, 0, 0, 262179, 0, 0, 262182, 0, 0, 262183, 0, 0, 262184, 0, 0, 262185, 0, 0, 262188, 0, 0, 262189, 0, 0, 262210, 0, 0, 262211, 0, 0, 262214, 0, 0, 262215, 0, 0, 262218, 0, 0, 262219, 0, 0, 262222, 0, 0, 262223, 0, 0, 262226, 0, 0, 262227, 0, 0, 262230, 0, 0, 262231, 0, 0, 262239, 0, 0, 262240, 0, 0, 262243, 0, 0, 262244, 0, 0, 262247, 0, 0, 262248, 0, 0, 262254, 0, 0, 262255, 0, 0, 262256, 0, 0, 327680, 0, 0, 327681, 0, 0, 327694, 0, 0, 327695, 0, 0, 327706, 0, 0, 327707, 0, 0, 327713, 0, 0, 327714, 0, 0, 327720, 0, 0, 327721, 0, 0, 327750, 0, 0, 327751, 0, 0, 327758, 0, 0, 327759, 0, 0, 327766, 0, 0, 327767, 0, 0, 327772, 0, 0, 327773, 0, 0, 327775, 0, 0, 327776, 0, 0, 327783, 0, 0, 327784, 0, 0, 327786, 0, 0, 327787, 0, 0, 327792, 0, 0, 393216, 0, 0, 393217, 0, 0, 393230, 0, 0, 393231, 0, 0, 393242, 0, 0, 393243, 0, 0, 393256, 0, 0, 393257, 0, 0, 393286, 0, 0, 393287, 0, 0, 393294, 0, 0, 393295, 0, 0, 393302, 0, 0, 393303, 0, 0, 393308, 0, 0, 393309, 0, 0, 393310, 0, 0, 393311, 0, 0, 393312, 0, 0, 393319, 0, 0, 393320, 0, 0, 393321, 0, 0, 393322, 0, 0, 393323, 0, 0, 393328, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 0, 0, 458773, 0, 0, 458774, 0, 0, 458775, 0, 0, 458776, 0, 0, 458777, 0, 0, 458778, 0, 0, 458779, 0, 0, 458780, 0, 0, 458781, 0, 0, 458782, 0, 0, 458783, 0, 0, 458784, 0, 0, 458785, 0, 0, 458786, 0, 0, 458787, 0, 0, 458788, 0, 0, 458789, 0, 0, 458790, 0, 0, 458791, 0, 0, 458792, 0, 0, 458793, 0, 0, 458794, 0, 0, 458795, 0, 0, 458796, 0, 0, 458797, 0, 0, 458798, 0, 0, 458799, 0, 0, 458800, 0, 0, 458801, 0, 0, 458802, 0, 0, 458803, 0, 0, 458804, 0, 0, 458805, 0, 0, 458806, 0, 0, 458807, 0, 0, 458808, 0, 0, 458809, 0, 0, 458810, 0, 0, 458811, 0, 0, 458812, 0, 0, 458813, 0, 0, 458814, 0, 0, 458815, 0, 0, 458816, 0, 0, 458817, 0, 0, 458818, 0, 0, 458819, 0, 0, 458820, 0, 0, 458821, 0, 0, 458822, 0, 0, 458823, 0, 0, 458824, 0, 0, 458825, 0, 0, 458826, 0, 0, 458827, 0, 0, 458828, 0, 0, 458829, 0, 0, 458830, 0, 0, 458831, 0, 0, 458832, 0, 0, 458833, 0, 0, 458834, 0, 0, 458835, 0, 0, 458836, 0, 0, 458837, 0, 0, 458838, 0, 0, 458839, 0, 0, 458840, 0, 0, 458841, 0, 0, 458842, 0, 0, 458843, 0, 0, 458844, 0, 0, 458845, 0, 0, 458846, 0, 0, 458847, 0, 0, 458848, 0, 0, 458849, 0, 0, 458850, 0, 0, 458851, 0, 0, 458852, 0, 0, 458853, 0, 0, 458854, 0, 0, 458855, 0, 0, 458856, 0, 0, 458857, 0, 0, 458858, 0, 0, 458859, 0, 0, 458860, 0, 0, 458861, 0, 0, 458862, 0, 0, 458863, 0, 0, 458864, 0, 0 )

[node name="life2x" type="Node2D" parent="."]

[node name="life2x" parent="life2x" instance=ExtResource( 9 )]
position = Vector2( 5023.22, 84.3322 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ViewportContainer" type="ViewportContainer" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="CanvasLayer/ViewportContainer"]
position = Vector2( 21.2132, 18.6274 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )

[node name="Sprite2" type="Sprite" parent="CanvasLayer/ViewportContainer"]
position = Vector2( 92.25, 17.75 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 18 )

[node name="life_label" type="Label" parent="CanvasLayer/ViewportContainer"]
margin_left = 40.0
margin_top = 17.0
margin_right = 80.0
margin_bottom = 31.0
text = "x3"

[node name="anneaux_label" type="Label" parent="CanvasLayer/ViewportContainer"]
margin_left = 100.0
margin_top = 17.0
margin_right = 140.0
margin_bottom = 31.0

[node name="scoreLabel" type="Label" parent="CanvasLayer/ViewportContainer"]
margin_left = 660.0
margin_top = 17.0
margin_right = 716.0
margin_bottom = 31.0
text = "0000000"
align = 1
valign = 1

[node name="pause" type="TextureButton" parent="CanvasLayer/ViewportContainer"]
pause_mode = 1
margin_left = 750.0
margin_top = 12.0
margin_right = 794.0
margin_bottom = 32.0
texture_normal = ExtResource( 11 )

[node name="Panel" type="Panel" parent="CanvasLayer/ViewportContainer"]
pause_mode = 2
visible = false
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 190.0
margin_bottom = 256.0

[node name="Label" type="Label" parent="CanvasLayer/ViewportContainer/Panel"]
margin_right = 190.0
margin_bottom = 32.0
text = "LEVEL : "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resume" type="TextureButton" parent="CanvasLayer/ViewportContainer/Panel"]
margin_top = 32.0
margin_right = 178.0
margin_bottom = 82.0
texture_normal = ExtResource( 7 )

[node name="restart" type="TextureButton" parent="CanvasLayer/ViewportContainer/Panel"]
margin_top = 88.0
margin_right = 178.0
margin_bottom = 138.0
texture_normal = ExtResource( 5 )

[node name="sound" type="TextureButton" parent="CanvasLayer/ViewportContainer/Panel"]
margin_top = 144.0
margin_right = 178.0
margin_bottom = 194.0
texture_normal = ExtResource( 8 )

[node name="menu" type="TextureButton" parent="CanvasLayer/ViewportContainer/Panel"]
margin_top = 200.0
margin_right = 178.0
margin_bottom = 250.0
texture_normal = ExtResource( 6 )

[node name="gameOverPanel" type="Panel" parent="CanvasLayer/ViewportContainer"]
pause_mode = 2
visible = false
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 7.0
margin_top = 3.0
margin_right = 135.0
margin_bottom = 253.0

[node name="Sprite" type="Sprite" parent="CanvasLayer/ViewportContainer/gameOverPanel"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
centered = false

[node name="menu" type="TextureButton" parent="CanvasLayer/ViewportContainer/gameOverPanel"]
margin_top = 179.528
margin_right = 23.0
margin_bottom = 202.528
texture_normal = ExtResource( 16 )

[node name="retry" type="TextureButton" parent="CanvasLayer/ViewportContainer/gameOverPanel"]
margin_left = 44.5684
margin_top = 179.528
margin_right = 114.568
margin_bottom = 202.528
texture_normal = ExtResource( 3 )

[node name="winPanel" type="Panel" parent="CanvasLayer/ViewportContainer"]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 256.0
margin_bottom = 190.0

[node name="Label" type="Label" parent="CanvasLayer/ViewportContainer/winPanel"]
margin_left = 10.0
margin_top = 50.0
margin_right = 50.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer/ViewportContainer/winPanel"]
self_modulate = Color( 0.921569, 0.0392157, 0.0392157, 1 )
margin_left = 150.0
margin_top = 55.0
margin_right = 190.0
margin_bottom = 69.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" type="Node2D" parent="CanvasLayer/ViewportContainer/winPanel"]

[node name="Sprite4" type="Sprite" parent="CanvasLayer/ViewportContainer/winPanel/Node2D"]
position = Vector2( 158.028, 84.2686 )
texture = ExtResource( 20 )

[node name="Sprite5" type="Sprite" parent="CanvasLayer/ViewportContainer/winPanel/Node2D"]
position = Vector2( 190.193, 84.2678 )
texture = ExtResource( 20 )

[node name="Sprite6" type="Sprite" parent="CanvasLayer/ViewportContainer/winPanel/Node2D"]
position = Vector2( 174.287, 84.2678 )
texture = ExtResource( 20 )

[node name="Sprite1" type="Sprite" parent="CanvasLayer/ViewportContainer/winPanel/Node2D"]
visible = false
position = Vector2( 158.028, 84.2686 )
texture = ExtResource( 19 )

[node name="Sprite2" type="Sprite" parent="CanvasLayer/ViewportContainer/winPanel/Node2D"]
visible = false
position = Vector2( 174.287, 84.2678 )
texture = ExtResource( 19 )

[node name="Sprite3" type="Sprite" parent="CanvasLayer/ViewportContainer/winPanel/Node2D"]
visible = false
position = Vector2( 190.193, 84.2678 )
texture = ExtResource( 19 )

[node name="menu" type="TextureButton" parent="CanvasLayer/ViewportContainer/winPanel"]
margin_left = 10.213
margin_top = 132.628
margin_right = 33.213
margin_bottom = 155.628
texture_normal = ExtResource( 22 )

[node name="rejouer" type="TextureButton" parent="CanvasLayer/ViewportContainer/winPanel"]
margin_left = 63.4031
margin_top = 132.628
margin_right = 86.4031
margin_bottom = 155.628
texture_normal = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next" type="TextureButton" parent="CanvasLayer/ViewportContainer/winPanel"]
margin_left = 151.803
margin_top = 133.377
margin_right = 221.803
margin_bottom = 157.377
texture_normal = ExtResource( 21 )

[node name="ennemis" type="Node2D" parent="."]

[node name="thorn (epine)" parent="ennemis" instance=ExtResource( 12 )]
position = Vector2( 1120.89, 418.553 )

[node name="thorn (epine)2" parent="ennemis" instance=ExtResource( 12 )]
position = Vector2( 1957.27, 420.879 )

[node name="thorn (epine)3" parent="ennemis" instance=ExtResource( 12 )]
position = Vector2( 2332.94, 400.114 )

[node name="thorn (epine)4" parent="ennemis" instance=ExtResource( 12 )]
position = Vector2( 3237.17, 415.216 )

[node name="thorn (epine)5" parent="ennemis" instance=ExtResource( 12 )]
position = Vector2( 3452.37, 409.553 )

[node name="thorn (epine)6" parent="ennemis" instance=ExtResource( 12 )]
position = Vector2( 3768.47, 410.602 )

[node name="thorn (epine)7" parent="ennemis" instance=ExtResource( 12 )]
position = Vector2( 3960.16, 407.655 )

[node name="thorn (epine)8" parent="ennemis" instance=ExtResource( 12 )]
position = Vector2( 6047.23, 325.417 )

[node name="thorn (epine)9" parent="ennemis" instance=ExtResource( 12 )]
position = Vector2( 6751.15, 305.255 )

[node name="dyn_thorn" type="Node2D" parent="."]

[node name="checkpoints" type="Node2D" parent="."]

[node name="checkpoint" parent="checkpoints" instance=ExtResource( 15 )]
position = Vector2( 3584.85, 152.528 )

[node name="checkpoint2" parent="checkpoints" instance=ExtResource( 15 )]
position = Vector2( 6402.03, 368.635 )

[node name="checkpoint3" parent="checkpoints" instance=ExtResource( 15 )]
position = Vector2( 800.096, 398.55 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 7105.98, 384.872 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="StaticBody2D"]
scale = Vector2( 0.783026, 0.789064 )
frames = SubResource( 16 )

[node name="CS" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 17 )

[node name="Area2D" type="Area2D" parent="StaticBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D/Area2D"]
position = Vector2( 42.3784, -0.705963 )
shape = SubResource( 18 )

[node name="limit_camera" type="Position2D" parent="."]
position = Vector2( 7232, 0 )
__meta__ = {
"_gizmo_extents_": 75.8
}

[node name="pos_init_player" type="Position2D" parent="."]
position = Vector2( 192, 112 )
__meta__ = {
"_gizmo_extents_": 50.0
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 500, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
scale = Vector2( 0.83, 0.4 )
texture = ExtResource( 25 )
centered = false

[connection signal="pressed" from="CanvasLayer/ViewportContainer/pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="CanvasLayer/ViewportContainer/Panel/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CanvasLayer/ViewportContainer/Panel/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="CanvasLayer/ViewportContainer/Panel/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/ViewportContainer/gameOverPanel/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/ViewportContainer/gameOverPanel/retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="CanvasLayer/ViewportContainer/winPanel/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/ViewportContainer/winPanel/rejouer" to="." method="_on_rejouer_pressed"]
[connection signal="pressed" from="CanvasLayer/ViewportContainer/winPanel/next" to="." method="_on_next_pressed"]
[connection signal="animation_finished" from="StaticBody2D/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="StaticBody2D/Area2D" to="." method="_on_Area2D_body_entered"]
